--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@whiskeysockets/baileys": "^6.7.9",
     "chalk": "^4.1.2",
     "dotenv": "^8.6.0",
+    "form-data": "^4.0.0",
     "format-duration-time": "^1.5.4",
     "fs-extra": "^9.0.1",
     "jimp": "^0.16.1",
