--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^8.6.0",
     "form-data": "^4.0.0",
     "format-duration-time": "^1.5.4",
+    "express": "^4.18.2",
     "fs-extra": "^9.0.1",
     "jimp": "^0.16.1",
     "link-preview-js": "^3.0.5",
