--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "exports": "./app.js",
   "scripts": {
-    "start": "npm upgrade @victorsouzaleal/lbot-api-comandos --silent && node app.js",
+    "start": "yarn upgrade @victorsouzaleal/lbot-api-comandos --silent && node app.js",
     "dev": "node app.js"
   },
   "author": "Leal",
@@ -24,7 +24,6 @@
     "@whiskeysockets/baileys": "^6.7.9",
     "chalk": "^4.1.2",
     "dotenv": "^8.6.0",
-    "form-data": "^4.0.0",
     "format-duration-time": "^1.5.4",
     "express": "^4.18.2",
     "fs-extra": "^9.0.1",
